# stock-collector

./: .gitignore  .gitmodules  .travis.yml  Jenkinsfile  README.md  collector.cabal  scaleway_travis.enc  stack.yaml  stock-collector_secrets.tar.enc  travis_collector_common.enc  travis_collector_secrets.tar.enc  travis_collector_stats.enc  travis_collector_stats_common.enc
.circleci/: config.yml
app/: Main.hs  StockCollectorSetup.hs
conf/: cassandra.txt  collector.yaml  stats.yaml  tables.sql
data/: amex.csv  nasdaq.csv  nyse.csv  source.md  tenTickers.txt
sample/: metadata.json  metadata2.json  one_minute.json  sampleResponse.json  tick.json  tick2.json  ticks.json  ticks2.json
scripts/: dockerhub.sh
src/: AlphaRequest.hs  Cass.hs  Lib.hs  Psql.hs  PsqlDDL.hs  SetupLib.hs
src/Collector/: AlphaRequest.hs
src/Collector/Types/: AlphaMetaData.hs  Tick.hs  TimeSeriesResponse.hs
src/Types/: AlphaMetaData.hs  AlphaRequest.hs  AlphaResponse.hs  Tick.hs  TimeSeriesResponse.hs
src/Types/AlphaMetaData/: JSON.hs
src/Types/AlphaResponse/: JSON.hs
src/Types/Tick/: JSON.hs
