name:                collector
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/collector#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:     Lib
                     , SetupLib
                     , Types.AlphaRequest
                     , Types.AlphaResponse
                     , Types.AlphaMetaData
                     , Types.AlphaMetaData.JSON
                     , Types.AlphaResponse.JSON
                     
  build-depends:       base >= 4.7 && < 5
                     , stock-common >= 0.1.0.0
                     , stock-stats >= 0.1.0.0  
                     , wreq
                     , aeson
                     , time
                     , http-conduit
                     , bytestring
                     , containers
                     , unordered-containers
                     , yaml-config >= 0.4.0
                     , text
                     , tinylog
                     , opaleye
                     , product-profunctors
                     , postgresql-simple >= 0.5.0.0
                     , random
                     , monad-par
                     , hedis
  default-language:    Haskell2010

executable stock-collector
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , collector
  default-language:    Haskell2010

executable stock-collector-setup
  hs-source-dirs:      app
  main-is:             StockCollectorSetup.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , collector
  default-language:    Haskell2010
  
test-suite stock-collector-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , collector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/collector
